--- a/index.html
+++ b/index.html
@@ -121,6 +121,6 @@
   </section>
 
   <!-- Button to go to the next page -->
-  <a href="page2.html" class="next-btn">Next Page ➡️</a>
+  <a href="Page2.html" class="next-btn">Next Page ➡️</a>
 </body>
 </html>
