--- a/Page2.html
+++ b/Page2.html
@@ -112,7 +112,7 @@
   <!-- Navigation -->
   <div class="nav-buttons">
     <a href="index.html">⬅️ Previous</a>
-    <a href="page3.html">Next ➡️</a>
+    <a href="Page3.html">Next ➡️</a>
 
 </body>
 </html>
