--- a/Page3.html
+++ b/Page3.html
@@ -108,7 +108,7 @@
 
   <!-- Navigation -->
   <div class="nav-buttons">
-    <a href="index.html">⬅️ Previous</a>
+    <a href="Page2.html">⬅️ Previous</a>
   </div>
 </body>
 </html>
